# genetic_scheduling

./: README.md  genetic.py
cxx/: CMakeLists.txt
cxx/include/: Genetic.hpp  Lectures.hpp  Mapper.hpp  Minisymposia.hpp  Minisymposium.hpp  Room.hpp  Rooms.hpp  Schedule.hpp  Scheduler.hpp  Speaker.hpp  Theme.hpp  Timeslots.hpp  Utility.hpp
cxx/src/: CMakeLists.txt  Lectures.cpp  Mapper.cpp  Minisymposia.cpp  Minisymposium.cpp  Room.cpp  Rooms.cpp  Schedule.cpp  Scheduler.cpp  Speaker.cpp  Theme.cpp  Timeslots.cpp  driver.cpp  mini-assignments-driver.cpp  schedule-mini-driver.cpp
data/: environment.yml  metadata_generator.py  minisymposia.yaml  minisymposia_improved_themes.yaml  minisymposia_predicted_popularity.yaml  minisymposia_predicted_theme.yaml  popularity.py  rooms.yaml  scraper.py  theme_clustering.py  themes.txt
data/SIAM-CSE19/: minisymposia.yaml  minisymposia_improved_themes.yaml  rooms.yaml
data/SIAM-CSE23/: citations.yaml  codes.yaml  csv2yaml.py  minisymposia.yaml  timeslots.yaml
python/: fuzzer.py
python/data/: minisymposia_predicted_theme.yaml  scraper.py
